# envsafe

./: README.md  demo.py  pyproject.toml
src/envsafe/: __init__.py  core.py  exceptions.py  loaders.py  parsers.py
tests/: test_envsafe.py
